# surfaced

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml  scrape.yml
alembic/: env.py
alembic/versions/: 7cc55ca1c078_add_jobs_table.py  7dfe28af890e_add_source_id_to_jobs.py  81fabbe4494a_add_users_table.py  afd34cd8fbbd_.py  b15bf1ef536a_add_saved_jobs_table.py  c3a1f8b92e10_add_salary_currency_to_jobs.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/saved/: page.tsx
frontend/src/components/: AuthProvider.tsx  JobCard.tsx  Navbar.tsx
frontend/src/lib/: api.ts  auth.ts  utils.ts
frontend/src/types/: index.ts
scripts/: generate_telegram_session.py  scrape.py
src/surfaced/: main.py
src/surfaced/auth/: constants.py  dependencies.py  exceptions.py  models.py  router.py  routers.py  schemas.py  services.py  utilities.py
src/surfaced/core/: config.py  database.py  logging.py  redis.py
src/surfaced/jobs/: constants.py  exceptions.py  models.py  routers.py  schemas.py  services.py  utilities.py
src/surfaced/scrapers/: hh.py  hh_exceptions.py  tech_stack_constant.py  telegram.py
src/surfaced/worker/: celery_app.py  tasks.py
tests/: conftest.py
tests/integration/: test_auth.py  test_jobs.py  test_saved_jobs.py
tests/unit/: test_auth_utils.py  test_jobs_utils.py
(+2 files in other folders)
