[project]
name = "surfaced"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "greenlet>=3.5.0",
    "httpx>=0.28.1",
    "passlib[argon2]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "redis>=7.4.0",
    "sentry-sdk>=2.59.0",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "httpx>=0.28.1",
    "hypothesis>=6.152.7",
    "mypy>=2.1.0",
    "pip-audit>=2.10.0",
    "pre-commit>=4.6.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 90
exclude = ["alembic/versions/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
explicit_package_bases = true
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]
